# tb

./: .env  actors.py  avoid_losing.py  backtest_v1.py  check_trading_hours.py  close_and_reverser.py  detect_candlestick.py  filter_stocks.py  helpers.py  models.py  pyproject.toml  rules.py  scan_market.py  settings.py  tests.py  trade.py  utils.py  vizualise.py
ml/: .env  news.py  settings.py  summaries.json  utils.py  v3.py
trading_system/models/: models.py
trading_system/utils/: detect_candlestick.py  filter_stocks.py  scan_market.py
