[tool.poetry]
name = "tradebot"
version = "0.1.0"
description = ""
authors = ["Michael Brown <kurosama112@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pytest = "^7.3.1"
alpaca-trade-api = "^3.0.0"
backtrader = "^1.9.78"
python-dotenv = "^1.0.0"
space = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
